--- a/src/main/resources/com/example/cms/Teacher/Payment/manage-payment.fxml
+++ b/src/main/resources/com/example/cms/Teacher/Payment/manage-payment.fxml
@@ -1,13 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="managePaymentPane" prefHeight="720.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.cms.Teacher.Payment.ManagePaymentController">
+   <children>
+      <VBox layoutX="80.0" layoutY="130.0" prefHeight="460.0" prefWidth="730.0">
+         <children>
+            <Button fx:id="btnMakePayment" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#makePayment" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="To'lov qilish" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+               <padding>
+                  <Insets left="35.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="35.0" top="60.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="btnUpdatePayment" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#updatePayment" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="To'lovni yangilash" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+               <padding>
+                  <Insets left="35.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets bottom="35.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="btnShowPayment" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#showPayment" prefHeight="90.0" prefWidth="730.0" style="-fx-background-color: #1C92FF; -fx-background-radius: 10px;" text="To'lovlarni ko'rish" textFill="WHITE">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+               <padding>
+                  <Insets left="35.0" />
+               </padding>
+            </Button>
+         </children>
+      </VBox>
+   </children>
 </AnchorPane>
